--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,6 +6,13 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-family: 'Aller';
+}
+
 body,
 h1,
 h2,
@@ -19,19 +26,19 @@ dd {
   margin: 0;
 }
 
-ul[role='list'],
-ol[role='list'] {
+ul,
+ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 html:focus-within {
   scroll-behavior: smooth;
-}
-
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
 }
 
 a:not([class]) {
