--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,8 +1,6 @@
-/*#region Resetear estilos*/
+// resetear los estilos predefinidos y poner los que interesan
 
-*,
-*::before,
-*::after {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
@@ -27,8 +25,7 @@ dd {
   margin: 0;
 }
 
-ul,
-ol {
+ul, ol {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -46,17 +43,11 @@ a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-img,
-picture {
+img, picture {
   max-width: 100%;
   display: block;
 }
 
-input,
-button,
-textarea,
-select {
+input, button, textarea, select {
   font: inherit;
 }
-
-/*#endregion Resetear estilos*/
