--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,10 +1,22 @@
-@use '../abstracts' as *;
+// parrafos, encabezados, links y más
 
-@each $f-weight, $f-style, $f-name in $xlc-font-names {
+@use '../abstract' as *;
+
+@each $f-weight, $f-style, $f-ubi in $xlc-fonts {
     @font-face {
         font-family: 'Aller';
-        src: url('../font/Aller_' + #{$f-name} + '.ttf') format('truetype');
+        src: url(#{'../' + $f-ubi}) format('truetype');
         font-weight: #{$f-weight};
         font-style: #{$f-style};
     }
+}
+
+.xlc-title {
+    font-size: var(--xlc-l-font-size);
+    line-height: var(--xlc-headings-line-height);
+}
+
+.xlc-subtitle {
+    font-size: var(--xlc-s-font-size);
+    line-height: var(--xlc-subtitles-line-height);
 }
