--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -10,3 +10,9 @@ $xlc-grid-gap: 2rem; // 32px
 // Header
 $xlc-header-height: 13.25rem; // 212px
 
+// Projects
+$xlc-project-padding: 3.4rem; // 60px
+
+// Transitions
+$xlc-transition-projects-interval: .2s ease-in;
+
