--- a/sass/base/_root.scss
+++ b/sass/base/_root.scss
@@ -25,4 +25,8 @@
     --xlc-section-top-padding: #{$xlc-section-top-padding};
 
     --xlc-header-height: #{$xlc-header-height};
+
+    --xlc-project-padding: #{$xlc-project-padding};
+
+    --xlc-transition-projects-interval: #{$xlc-transition-projects-interval};
 }
