--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -5,8 +5,199 @@
     flex-wrap: wrap;
     
     .xlc-project {
-        flex-grow: 1;
         width: 33.33%;
         height: 28.125rem;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: var(--xlc-project-padding);
+        cursor: pointer;
+
+        .xlc-project-title {
+            position: relative;
+            z-index: 2;
+            padding-bottom: .3rem;
+
+            font-size: 1.875rem;
+            color: var(--xlc-white);
+            line-height: var(--xlc-paragraph-line-height);
+
+            transition: all .2s ease-in;
+        }
+        .xlc-project-description {
+            position: relative;
+            z-index: 2;
+            max-height: 0;
+
+            font-size: var(--xlc-xs-font-size);
+            color: var(--xlc-white);
+            line-height: var(--xlc-paragraph-line-height);
+            overflow: hidden;
+
+            transition: all var(--xlc-transition-projects-interval);
+        }
+        .xlc-project-img {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 0;
+
+            &::before {
+                content: '';
+                top: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                z-index: 3;
+
+                background-image: linear-gradient(
+                    to top,
+                      hsla(0, 0%, 46%, 0.88) 0%,
+                      hsla(0, 0%, 46%, 0.869) 8.6%,
+                      hsla(0, 0%, 46%, 0.837) 17.5%,
+                      hsla(0, 0%, 46%, 0.788) 26.5%,
+                      hsla(0, 0%, 46%, 0.726) 35.6%,
+                      hsla(0, 0%, 46%, 0.652) 44.6%,
+                      hsla(0, 0%, 46%, 0.57) 53.3%,
+                      hsla(0, 0%, 46%, 0.484) 61.7%,
+                      hsla(0, 0%, 46%, 0.396) 69.6%,
+                      hsla(0, 0%, 46%, 0.31) 76.9%,
+                      hsla(0, 0%, 46%, 0.228) 83.4%,
+                      hsla(0, 0%, 46%, 0.154) 89%,
+                      hsla(0, 0%, 46%, 0.092) 93.6%,
+                      hsla(0, 0%, 46%, 0.043) 97.1%,
+                      hsla(0, 0%, 46%, 0.011) 99.2%,
+                      hsla(0, 0%, 46%, 0) 100%
+                );
+                mix-blend-mode: multiply;
+            }
+
+            &::after {
+                content: '';
+                top: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                z-index: 1;
+    
+                background-color: var(--xlc-beige);
+                mix-blend-mode: color;
+
+                transition: all, var(--xlc-transition-projects-interval);
+            }
+
+            img {
+                position: relative;
+                z-index: 2;
+                opacity: .32;
+                height: 100%;
+
+                transition: all, var(--xlc-transition-projects-interval);
+            }
+        }
+
+        &:hover {
+            .xlc-project-title {
+                color: var(--xlc-orange);
+            }
+
+            .xlc-project-description {
+                max-height: 100%;
+            }
+
+            .xlc-project-img {
+                &::after {
+                    background-color: transparent;
+                }
+                img {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    .xlc-all-project {
+        width: 33.33%;
+        height: 28.125rem;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: var(--xlc-project-padding);
+        cursor: pointer;
+
+        .xlc-project-title {
+            position: relative;
+            z-index: 2;
+            margin-bottom: .5rem;
+
+            font-size: 1.875rem;
+            color: var(--xlc-orange);
+            line-height: var(--xlc-paragraph-line-height);
+
+            transition: all .2s ease-in;
+        }
+        .xlc-project-description {
+            position: relative;
+            z-index: 2;
+
+            font-size: var(--xlc-xs-font-size);
+            color: var(--xlc-white);
+            line-height: var(--xlc-paragraph-line-height);
+            overflow: hidden;
+
+            transition: all var(--xlc-transition-projects-interval);
+        }
+        .xlc-project-img {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 0;
+
+            &::before {
+                content: '';
+                top: 0;
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                z-index: 3;
+
+                background-image: linear-gradient(
+                    to top,
+                      hsla(0, 0%, 46%, 0.88) 0%,
+                      hsla(0, 0%, 46%, 0.869) 8.6%,
+                      hsla(0, 0%, 46%, 0.837) 17.5%,
+                      hsla(0, 0%, 46%, 0.788) 26.5%,
+                      hsla(0, 0%, 46%, 0.726) 35.6%,
+                      hsla(0, 0%, 46%, 0.652) 44.6%,
+                      hsla(0, 0%, 46%, 0.57) 53.3%,
+                      hsla(0, 0%, 46%, 0.484) 61.7%,
+                      hsla(0, 0%, 46%, 0.396) 69.6%,
+                      hsla(0, 0%, 46%, 0.31) 76.9%,
+                      hsla(0, 0%, 46%, 0.228) 83.4%,
+                      hsla(0, 0%, 46%, 0.154) 89%,
+                      hsla(0, 0%, 46%, 0.092) 93.6%,
+                      hsla(0, 0%, 46%, 0.043) 97.1%,
+                      hsla(0, 0%, 46%, 0.011) 99.2%,
+                      hsla(0, 0%, 46%, 0) 100%
+                );
+                mix-blend-mode: multiply;
+            }
+
+            img {
+                position: relative;
+                z-index: 2;
+                opacity: 1;
+                height: 100%;
+            }
+        }
     }
 }
